Fixed Dark Mode for First Page

--- a/src/styling/about-me.css
+++ b/src/styling/about-me.css
@@ -2,7 +2,7 @@ html{
     font-size: 16px;
 }
 
-#About-Me-stage{
+.About-Me-stage{
     display: flex;
     justify-content: center;
     /* border: 2px solid black; */
@@ -11,7 +11,7 @@ html{
     width: 95%;
 }
 
-#About-Me{
+.About-Me{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
 
@@ -29,20 +29,20 @@ html{
 }
 
 /* selecting all the elements in the div */
-#About-Me *{
+.About-Me *{
     /* aligning the text in the center */
     text-align: center; 
 }
 
 /* selecting the h2 tag in the div */
-#About-Me h2{
+.About-Me h2{
     color: #113A6A;
     font-family: 'Montserrat', sans-serif;
     font-size: 280%;
 }
 
 /* selecting the p tag in the div */
-#About-Me p{
+.About-Me p{
     color: #003C6E;
     font-family: 'Comfortaa', cursive;
     font-size: 140%;
